- added swagger doc api - added raw api namespace for future extensibility - moved index rendering to web namespace - added classes and models from config file

--- a/src/templates/apod_template.html
+++ b/src/templates/apod_template.html
@@ -13,14 +13,14 @@
     <div class="container">
         <nav class="navbar">
             <div class="logo">
-                <a href="https://jankeemunkey.com">
+                <a href="https://SkylarHoughtonGithub.com">
                     <img src="{{ url_for('static', filename='favicon-256x256.png') }}" alt="Logo">
                 </a>
             </div>
         </nav>
 
         <div class="cta-container">
-            <a href="{{ url_for('index') }}" class="cta-button">
+            <a href="{{ url_for('web.index') }}" class="cta-button">
                 <span>Home Page</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <line x1="5" y1="12" x2="19" y2="12"></line>
